Fixed styling issues on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -91,8 +91,65 @@ body {
 .projectBox {
   @include animation(fadein-immediate, 2s);
   justify-self: center;
+  align-self: center;
   border: 1px solid rgba(255,255,255,0.4);
   background: rgba(255, 255, 255, 0.3);
+  padding: 12px;
+  margin: 10px;
+  border-radius:16px;
+  max-width: 640px;
+
+  h3 {
+    margin: 0;
+  }
+  .subtext {
+    margin-top: 2px;
+    margin-bottom: 2px;
+    font-size: 14px;
+  }
+  .description {
+    margin-top: 7px;
+    font-size: 12px;
+    margin-bottom: 2px;
+  }
+  .techList {
+    margin-top: 7px;
+    margin-bottom: 0px;
+    padding-left: 20px;
+    font-size: 14px;
+    columns: 2;
+    -webkit-columns: 2;
+    -moz-columns: 2;
+  }
+
+  .description2 {
+    margin-top: 7px;
+    font-size: 14px;
+    margin-bottom: 2px;;
+  }
+
+  .techList2 {
+    margin-top: 7px;
+    margin-bottom: 0px;
+    padding-left: 20px;
+    font-size: 12px;
+    columns: 2;
+    -webkit-columns: 2;
+    -moz-columns: 2;
+  }
+}
+
+/*  Education  */
+.educationBox {
+  @include animation(fadein-immediate, 2s);
+  justify-self: center;
+  align-self: center;
+  border: 1px solid rgba(255,255,255,0.4);
+  background: rgba(255, 255, 255, 0.3);
+  padding: 12px;
+  margin: 10px;
+  border-radius:3px;
+  max-width: 640px;
 }
 
 // Desktop/Tablet
@@ -100,9 +157,9 @@ body {
   .grid {
     display: grid;
     background-color: rgba(0, 0, 0, 0.6);
-    grid-template-rows: auto 1fr 1fr;
-    grid-auto-rows: 1fr;
-    height: 100vh;
+    grid-template-rows: 60px;
+    grid-auto-rows: auto;
+    min-height: 100vh;
     color: #fff;
   }
   
@@ -142,8 +199,9 @@ body {
   .grid {
     display: grid;
     background-color: rgba(0, 0, 0, 0.6);
-    grid-template-rows: auto 1fr 1fr;
-    height: 100vh;
+    grid-template-rows: 130px;
+    grid-auto-rows: auto;
+    min-height: 100vh;
     color: #fff;
   }
   
@@ -184,8 +242,9 @@ body {
   .grid {
     display: grid;
     background-color: rgba(0, 0, 0, 0.6);
-    grid-template-rows: auto 1fr 1fr;
-    height: 100vh;
+    grid-template-rows: 60px;
+    grid-auto-rows: auto;
+    min-height: 100vh;
     color: #fff;
   }
   
@@ -220,11 +279,27 @@ body {
     justify-self: center;
   }
 
-  .hiddenScroll {
-    height: 100vh;
-  }
+  .projectBox {
+  
+    h3 {
+      
+    }
+    .subtext {
+      
+    }
+    .description {
+      
+    }
+    .techList {
+      columns: 1 !important;
+      -webkit-columns: 1 !important;
+      -moz-columns: 1 !important;
+    }
 
-  .hidden {
-    display: initial !important;
+    .techList2 {
+      columns: 1 !important;
+      -webkit-columns: 1 !important;
+      -moz-columns: 1 !important;
+    }
   }
 }
